fix revealer not stretching its child

--- a/frontend/css/components/revealer.scss
+++ b/frontend/css/components/revealer.scss
@@ -46,6 +46,10 @@
 .rio-revealer-content-inner {
     position: relative;
 
+    // Make sure to fill the parent element
+    min-width: 100%;
+    min-height: 100%;
+
     @include single-container();
 
     opacity: 0;
